# third_party_freetype

./: BUILD.gn  CVE-2026-23865.patch  OAT.xml  README.OpenSource  backport-CVE-2023-2004.patch  backport-CVE-2025-27363.patch  backport-Minimal-stop-gap-fix-for-CVE-2025-27363.patch  backport-autofit-signed-integer-overflow.patch  backport-freetype-2.12.1-enable-funcs.patch  backport-freetype-add-cfp.patch  backport-freetype-enable-cfp.patch  backport-truetype-signed-integer-overflow.patch  bundle.json  freetype.gni  install.py
include/freetype/internal/: ftgloadr.h  ftobjs.h  ftstream.h
src/base/: ftgloadr.c  ftobjs.c  ftstream.c
src/gzip/: inflate.c
src/sfnt/: sfobjs.c  sfwoff2.c
src/truetype/: ttgxvar.c
